--- a/index.html
+++ b/index.html
@@ -1,74 +1,355 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Website</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Dr. Your Name — Academic Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
+    :root{
+      --bg: #0f1226;          /* page background */
+      --bg-soft:#171b36;      /* cards */
+      --text:#e8eaf6;         /* text */
+      --muted:#b6b9d6;        /* muted text */
+      --brand:#7c5cff;        /* brand color */
+      --brand-2:#23d5ab;      /* accent */
+      --shadow: 0 20px 40px rgba(0,0,0,.35);
+      color-scheme: dark;
     }
-    header {
-      background: #333;
-      color: #fff;
-      padding: 10px 20px;
-      text-align: center;
+    *{box-sizing:border-box}
+    html{scroll-behavior:smooth}
+    body{
+      margin:0; background:
+        radial-gradient(1200px 600px at 80% -10%, rgba(124,92,255,.25), transparent 60%),
+        radial-gradient(1000px 500px at -10% 20%, rgba(35,213,171,.22), transparent 60%),
+        var(--bg);
+      color:var(--text); font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+      line-height:1.6;
     }
-    header nav a {
-      color: #fff;
-      margin: 0 10px;
-      text-decoration: none;
+    /* ===== Header / Nav ===== */
+    .nav{
+      position:sticky; top:0; z-index:50; backdrop-filter:saturate(140%) blur(8px);
+      background:rgba(15,18,38,.65); border-bottom:1px solid rgba(255,255,255,.06);
     }
-    section {
-      padding: 20px;
-    }
-    footer {
-      background: #333;
-      color: #fff;
-      text-align: center;
-      padding: 10px;
-      margin-top: 20px;
-    }
-    .container {
-      max-width: 900px;
-      margin: auto;
+    .wrap{max-width:1200px; margin:0 auto; padding:16px 24px;}
+    .nav-inner{display:flex; align-items:center; gap:18px;}
+    .brand{font-weight:800; letter-spacing:.2px}
+    .brand span{background:linear-gradient(90deg,var(--brand),var(--brand-2)); -webkit-background-clip:text; background-clip:text; color:transparent}
+    .spacer{flex:1}
+    .menu{display:flex; gap:16px; flex-wrap:wrap}
+    .menu a{color:var(--muted); text-decoration:none; font-weight:600; padding:8px 12px; border-radius:999px}
+    .menu a:hover,.menu a.active{color:var(--text); background:rgba(255,255,255,.07)}
+    .cta{padding:10px 14px; border-radius:12px; background:linear-gradient(135deg,var(--brand),var(--brand-2)); color:#0a0d1f; font-weight:800; text-decoration:none}
+
+    /* ===== Hero ===== */
+    .hero{padding:72px 24px 48px}
+    .hero .grid{display:grid; grid-template-columns:1.1fr .9fr; gap:28px; align-items:center}
+    .kicker{color:var(--brand-2); font-weight:600; letter-spacing:.5px}
+    h1{font-family: 'Playfair Display', Georgia, serif; font-weight:700; line-height:1.1; font-size:clamp(32px, 5vw, 56px); margin:8px 0 12px}
+    .lead{font-size:clamp(16px, 2.2vw, 18px); color:var(--muted)}
+    .hero-card{background:linear-gradient(180deg, rgba(124,92,255,.12), rgba(15,18,38,.65)); border:1px solid rgba(255,255,255,.08); padding:20px; border-radius:20px; box-shadow:var(--shadow)}
+    .badge{display:inline-flex; align-items:center; gap:10px; padding:8px 12px; border-radius:999px; background:rgba(255,255,255,.07); color:var(--muted); font-weight:600}
+    .avatar{width:120px; aspect-ratio:1; border-radius:50%; object-fit:cover; border:3px solid rgba(255,255,255,.18)}
+
+    /* ===== Sections ===== */
+    section{padding:56px 24px}
+    .section-title{font-family:'Playfair Display', Georgia, serif; font-size:32px; margin:0 0 6px}
+    .section-kicker{color:var(--brand-2); font-weight:700; letter-spacing:.4px; text-transform:uppercase; font-size:12px}
+    .sub{color:var(--muted); margin-bottom:18px}
+    .cards{display:grid; grid-template-columns:repeat(12, 1fr); gap:16px}
+    .card{grid-column: span 6; background:var(--bg-soft); border:1px solid rgba(255,255,255,.08); border-radius:18px; padding:18px; box-shadow:var(--shadow)}
+    .card h3{margin:6px 0 8px}
+    .pill{display:inline-block; padding:6px 10px; background:rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.06); border-radius:999px; font-size:12px; color:var(--muted); margin-right:6px}
+
+    /* Timeline */
+    .timeline{position:relative; padding-left:22px}
+    .timeline:before{content:""; position:absolute; left:6px; top:2px; bottom:2px; width:2px; background:linear-gradient(var(--brand),var(--brand-2))}
+    .t-item{margin:14px 0 18px}
+    .t-item h4{margin:0 0 4px}
+    .t-meta{color:var(--muted); font-size:13px}
+
+    /* Publications */
+    .pub{display:grid; grid-template-columns: auto 1fr; gap:12px; padding:14px; background:rgba(255,255,255,.04); border:1px solid rgba(255,255,255,.08); border-radius:14px}
+    .pub .num{width:32px; height:32px; display:grid; place-items:center; border-radius:10px; font-weight:800; background:linear-gradient(135deg,var(--brand),var(--brand-2)); color:#0a0d1f}
+    .pub h4{margin:2px 0}
+
+    /* Gallery */
+    .gallery{display:grid; grid-template-columns:repeat(12,1fr); gap:10px}
+    .gallery img{width:100%; height:180px; object-fit:cover; border-radius:14px; border:1px solid rgba(255,255,255,.08)}
+    .g-span-6{grid-column:span 6}
+    .g-span-4{grid-column:span 4}
+
+    /* Contact */
+    form{display:grid; gap:12px; max-width:720px}
+    input, textarea{width:100%; padding:12px 14px; border-radius:12px; border:1px solid rgba(255,255,255,.12); background:rgba(255,255,255,.04); color:var(--text)}
+    button{padding:12px 16px; border:0; border-radius:14px; font-weight:800; cursor:pointer; background:linear-gradient(135deg,var(--brand),var(--brand-2)); color:#0a0d1f}
+
+    /* Footer */
+    footer{padding:24px; color:var(--muted); text-align:center}
+
+    /* Responsive */
+    @media (max-width: 940px){
+      .hero .grid{grid-template-columns:1fr}
+      .cards .card{grid-column: span 12}
+      .g-span-6,.g-span-4{grid-column:span 12}
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>My Personal Website</h1>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
+  <!-- ===== NAV ===== -->
+  <header class="nav">
+    <div class="wrap nav-inner">
+      <div class="brand">Dr. <span>Your Name</span></div>
+      <div class="spacer"></div>
+      <nav class="menu" id="menu">
+        <a href="#about" class="active">About</a>
+        <a href="#qualifications">Education</a>
+        <a href="#status">Present Status</a>
+        <a href="#publications">Publications</a>
+        <a href="#courses">Courses</a>
+        <a href="#teaching">Teaching</a>
+        <a href="#projects">Projects</a>
+        <a href="#activities">Other Activities</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#contact" class="cta">Contact</a>
+      </nav>
+    </div>
   </header>
 
-  <section id="about" class="container">
-    <h2>About Me</h2>
-    <p>Hello! I'm [Your Name]. This is my simple personal website where I share my work and ideas.</p>
+  <!-- ===== HERO ===== -->
+  <section class="hero wrap" id="about">
+    <div class="grid">
+      <div>
+        <div class="badge">🎓 Academic Portfolio</div>
+        <h1>Hi, I'm <span style="color:var(--brand-2)">Your Name</span> — Researcher & Educator</h1>
+        <p class="lead">Briefly introduce yourself in 2–3 lines. Mention your research focus, teaching interests, and impact. For example: "I study probabilistic models for health analytics, teach statistical learning, and build open‑source tools."</p>
+        <div style="margin-top:18px">
+          <span class="pill">Statistics</span>
+          <span class="pill">Machine Learning</span>
+          <span class="pill">Health Analytics</span>
+          <span class="pill">Python • R</span>
+        </div>
+      </div>
+      <div class="hero-card" style="display:flex; align-items:center; gap:16px">
+        <img class="avatar" src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=400&auto=format&fit=crop" alt="Profile"/>
+        <div>
+          <div class="kicker">Currently</div>
+          <p class="lead" style="margin:0">Research Scholar at <strong>Institute / University</strong> · Department of XYZ</p>
+          <p class="sub" style="margin:6px 0 0">Email: you@university.edu · Location: City, Country</p>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <section id="projects" class="container">
-    <h2>Projects</h2>
-    <ul>
-      <li>Project 1 – Short description</li>
-      <li>Project 2 – Short description</li>
-      <li>Project 3 – Short description</li>
-    </ul>
+  <!-- ===== QUALIFICATIONS ===== -->
+  <section id="qualifications">
+    <div class="wrap">
+      <div class="section-kicker">Profile</div>
+      <h2 class="section-title">Educational Qualifications</h2>
+      <p class="sub">List your degrees in reverse chronological order.</p>
+      <div class="timeline">
+        <div class="t-item">
+          <h4>Ph.D. in Statistics — <em>University Name</em></h4>
+          <div class="t-meta">2023 – Present · Thesis: Title… · Advisor: Prof. ABC</div>
+        </div>
+        <div class="t-item">
+          <h4>M.Sc. in Statistics — <em>University Name</em></h4>
+          <div class="t-meta">2019 – 2021 · CGPA: 8.9/10</div>
+        </div>
+        <div class="t-item">
+          <h4>B.Sc. in Mathematics — <em>College Name</em></h4>
+          <div class="t-meta">2016 – 2019 · First Class with Distinction</div>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <section id="contact" class="container">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:you@example.com">you@example.com</a></p>
+  <!-- ===== PRESENT STATUS ===== -->
+  <section id="status">
+    <div class="wrap">
+      <div class="section-kicker">Now</div>
+      <h2 class="section-title">Present Status</h2>
+      <div class="cards">
+        <article class="card">
+          <h3>Research Focus</h3>
+          <p>Layered Hidden Markov Models for metabolic health; longitudinal modeling of CGM data; uncertainty quantification.</p>
+        </article>
+        <article class="card">
+          <h3>Appointments</h3>
+          <ul>
+            <li>Research Scholar, Dept. of Statistics, University — 2023–Present</li>
+            <li>Teaching Assistant, Course Code — 2024–Present</li>
+          </ul>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- ===== PUBLICATIONS ===== -->
+  <section id="publications">
+    <div class="wrap">
+      <div class="section-kicker">Research</div>
+      <h2 class="section-title">Research Publications</h2>
+      <p class="sub">Add links to DOI/arXiv/publisher pages.</p>
+      <div class="pub">
+        <div class="num">1</div>
+        <div>
+          <h4>Title of Paper One</h4>
+          <div class="t-meta">Surname, Y. N., Coauthor, A. (2024). <em>Journal Name</em>. <a href="#" style="color:var(--brand-2); text-decoration:none">DOI/Link</a></div>
+        </div>
+      </div>
+      <div class="pub" style="margin-top:10px">
+        <div class="num">2</div>
+        <div>
+          <h4>Title of Paper Two</h4>
+          <div class="t-meta">Surname, Y. N. (2023). <em>Conference Name</em>. <a href="#">PDF</a></div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ===== COURSES ===== -->
+  <section id="courses">
+    <div class="wrap">
+      <div class="section-kicker">Academics</div>
+      <h2 class="section-title">Courses</h2>
+      <div class="cards">
+        <article class="card">
+          <h3>Probability & Statistics</h3>
+          <p>UG core · Syllabus: probability axioms, distributions, estimation, hypothesis testing.</p>
+        </article>
+        <article class="card">
+          <h3>Machine Learning</h3>
+          <p>PG elective · Syllabus: linear models, SVM, trees, ensembles, NN fundamentals.</p>
+        </article>
+        <article class="card">
+          <h3>Optimization for ML</h3>
+          <p>Gradient methods, convex optimization, KKT, proximal algorithms.</p>
+        </article>
+        <article class="card">
+          <h3>R/Python for Data Science</h3>
+          <p>Data wrangling, visualization, reproducible research.</p>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- ===== TEACHING ===== -->
+  <section id="teaching">
+    <div class="wrap">
+      <div class="section-kicker">Teaching</div>
+      <h2 class="section-title">Teaching Experience</h2>
+      <ul>
+        <li>Teaching Assistant — Machine Learning (Fall 2024): labs, grading, office hours.</li>
+        <li>Guest Lecture — Hidden Markov Models (Spring 2025): applications in health analytics.</li>
+        <li>Workshop — Reproducible Research in R (2023): 2‑day hands‑on.</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- ===== PROJECTS ===== -->
+  <section id="projects">
+    <div class="wrap">
+      <div class="section-kicker">Work</div>
+      <h2 class="section-title">Projects</h2>
+      <div class="cards">
+        <article class="card">
+          <h3>Layered HMM for Diabetes</h3>
+          <p>Built a 5‑layer HMM to model CGM emissions given lifestyle and clinical covariates.</p>
+          <a href="#" class="pill">Code Repo</a>
+          <a href="#" class="pill">Preprint</a>
+        </article>
+        <article class="card">
+          <h3>Physical Activity Classifier</h3>
+          <p>Classified activity levels using survey data; designed emission mapping for glucose balance.</p>
+          <a href="#" class="pill">Poster</a>
+        </article>
+        <article class="card">
+          <h3>Optimization Demos</h3>
+          <p>Interactive notebooks demonstrating LP, QP, and KKT with ML case studies.</p>
+          <a href="#" class="pill">Notebooks</a>
+        </article>
+        <article class="card">
+          <h3>Teaching Materials</h3>
+          <p>Lecture websites and slides for ML foundations and logistics regression modules.</p>
+          <a href="#" class="pill">Slides</a>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- ===== OTHER ACTIVITIES ===== -->
+  <section id="activities">
+    <div class="wrap">
+      <div class="section-kicker">Beyond Campus</div>
+      <h2 class="section-title">Other Activities</h2>
+      <div class="cards">
+        <article class="card">
+          <h3>Community</h3>
+          <p>Mentor at local data science club; organizer of monthly reading group.</p>
+        </article>
+        <article class="card">
+          <h3>Cycling & Wellness</h3>
+          <p>Weekend solo rides to nearby hills; sharing fitness journeys and safety tips.</p>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- ===== GALLERY ===== -->
+  <section id="gallery">
+    <div class="wrap">
+      <div class="section-kicker">Snapshots</div>
+      <h2 class="section-title">Gallery</h2>
+      <div class="gallery">
+        <img class="g-span-4" src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=800&auto=format&fit=crop" alt="Teaching" />
+        <img class="g-span-4" src="https://images.unsplash.com/photo-1553034545-32d4e5c5ee1a?q=80&w=800&auto=format&fit=crop" alt="Research" />
+        <img class="g-span-4" src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?q=80&w=800&auto=format&fit=crop" alt="Conference" />
+        <img class="g-span-6" src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?q=80&w=900&auto=format&fit=crop" alt="Coding" />
+        <img class="g-span-6" src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?q=80&w=900&auto=format&fit=crop" alt="Cycling" />
+      </div>
+    </div>
+  </section>
+
+  <!-- ===== CONTACT ===== -->
+  <section id="contact">
+    <div class="wrap">
+      <div class="section-kicker">Get in touch</div>
+      <h2 class="section-title">Contact</h2>
+      <p class="sub">This form is static. Connect it to a form service or email handler to receive messages.</p>
+      <form onsubmit="event.preventDefault(); alert('Thanks! This demo form does not send emails.');">
+        <div style="display:grid; grid-template-columns:1fr 1fr; gap:12px">
+          <input required placeholder="Full name" />
+          <input type="email" required placeholder="Email address" />
+        </div>
+        <input placeholder="Subject" />
+        <textarea rows="5" placeholder="Your message"></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
   </section>
 
   <footer>
-    <p>© 2025 My Website</p>
+    © <span id="year"></span> Your Name · Made with ❤️
   </footer>
+
+  <script>
+    // Active link highlight on scroll
+    const menuLinks = [...document.querySelectorAll('#menu a')];
+    const sections = menuLinks.map(a => document.querySelector(a.getAttribute('href'))).filter(Boolean);
+    const onScroll = () => {
+      const y = window.scrollY + 120;
+      let active = 0;
+      sections.forEach((s, i) => { if (y >= s.offsetTop) active = i; });
+      menuLinks.forEach((a,i) => a.classList.toggle('active', i===active));
+    };
+    window.addEventListener('scroll', onScroll);
+    onScroll();
+
+    // Current year footer
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
