--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <!-- ===== NAV ===== -->
   <header class="nav">
     <div class="wrap nav-inner">
-      <div class="brand">Dr. <span>Your Name</span></div>
+      <div class="brand">Dr. <span>Surnam Narendra</span></div>
       <div class="spacer"></div>
       <nav class="menu" id="menu">
         <a href="#about" class="active">About</a>
@@ -133,11 +133,11 @@
         </div>
       </div>
       <div class="hero-card" style="display:flex; align-items:center; gap:16px">
-        <img class="avatar" src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=400&auto=format&fit=crop" alt="Profile"/>
+        <img class="avatar" src="images/Picture1.png" alt="Profile"/>
         <div>
           <div class="kicker">Currently</div>
-          <p class="lead" style="margin:0">Research Scholar at <strong>Institute / University</strong> · Department of XYZ</p>
-          <p class="sub" style="margin:6px 0 0">Email: you@university.edu · Location: City, Country</p>
+          <p class="lead" style="margin:0">Assistant Professor at <strong>Woxsen University</strong> · Department of Statistics</p>
+          <p class="sub" style="margin:6px 0 0">Email: surnamnrendra@gmail.com · Kamkole: Hyderabad, India</p>
         </div>
       </div>
     </div>
