--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dr. Your Name — Academic Portfolio</title>
+  <title>Dr. Surnam Narendra — Academic Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
@@ -123,10 +123,12 @@
     <div class="grid">
       <div>
         <div class="badge">🎓 Academic Portfolio</div>
-        <h1>Hi, I'm <span style="color:var(--brand-2)">Your Name</span> — Researcher & Educator</h1>
+        <h1>Hi, I'm <span style="color:var(--brand-2)">Surnam Narendra</span> — Researcher & Educator</h1>
         <p class="lead">Briefly introduce yourself in 2–3 lines. Mention your research focus, teaching interests, and impact. For example: "I study probabilistic models for health analytics, teach statistical learning, and build open‑source tools."</p>
         <div style="margin-top:18px">
           <span class="pill">Statistics</span>
+           <span class="pill">Data Analytics</span>
+                  <span class="pill">Biostatistics</span>
           <span class="pill">Machine Learning</span>
           <span class="pill">Health Analytics</span>
           <span class="pill">Python • R</span>
@@ -136,7 +138,7 @@
         <img class="avatar" src="images/Picture1.png" alt="Profile"/>
         <div>
           <div class="kicker">Currently</div>
-          <p class="lead" style="margin:0">Assistant Professor at <strong>Woxsen University</strong> · Department of Statistics</p>
+          <p class="lead" style="margin:0">Assistant Professor at <strong>Woxsen University</strong> · Department of Mathematics</p>
           <p class="sub" style="margin:6px 0 0">Email: surnamnrendra@gmail.com · Kamkole: Hyderabad, India</p>
         </div>
       </div>
@@ -148,18 +150,17 @@
     <div class="wrap">
       <div class="section-kicker">Profile</div>
       <h2 class="section-title">Educational Qualifications</h2>
-      <p class="sub">List your degrees in reverse chronological order.</p>
       <div class="timeline">
         <div class="t-item">
-          <h4>Ph.D. in Statistics — <em>University Name</em></h4>
-          <div class="t-meta">2023 – Present · Thesis: Title… · Advisor: Prof. ABC</div>
+          <h4>Ph.D. in Statistics — <em>Pondicherry University</em></h4>
+          <div class="t-meta">Dec 2021 – Feb 2025 · Thesis: Multi-Level Hidden Markov Models and its Applications in Diabetes Studies · Advisor: Prof. Tirupathi Rao Padi</div>
         </div>
         <div class="t-item">
-          <h4>M.Sc. in Statistics — <em>University Name</em></h4>
-          <div class="t-meta">2019 – 2021 · CGPA: 8.9/10</div>
+          <h4>M.Sc. in Statistics — <em>Central University of Punajb</em></h4>
+          <div class="t-meta">2019 – 2021 · CGPA:6.69/10</div>
         </div>
         <div class="t-item">
-          <h4>B.Sc. in Mathematics — <em>College Name</em></h4>
+          <h4>B.Sc. in Mathematics Statistics and Computer Science — <em>SGS Arts College, SV University</em></h4>
           <div class="t-meta">2016 – 2019 · First Class with Distinction</div>
         </div>
       </div>
