--- a/index.html
+++ b/index.html
@@ -175,13 +175,14 @@
       <div class="cards">
         <article class="card">
           <h3>Research Focus</h3>
-          <p>Layered Hidden Markov Models for metabolic health; longitudinal modeling of CGM data; uncertainty quantification.</p>
+          <p>Layered Hidden Markov Models; Computational Biology; Stochastic Processes; Biostatistics; uncertainty quantification.</p>
         </article>
         <article class="card">
           <h3>Appointments</h3>
           <ul>
-            <li>Research Scholar, Dept. of Statistics, University — 2023–Present</li>
-            <li>Teaching Assistant, Course Code — 2024–Present</li>
+            <li>Researcher, Dept. of Mathematics, Woxsen University — Jul- 2025–Present</li>
+            <li>Teaching Assistant, Course Code — jul-2025–Present</li>
+            <li>Teaching Assistant, Course Code — jul-2025–Present</li>
           </ul>
         </article>
       </div>
@@ -305,11 +306,10 @@
       <div class="section-kicker">Snapshots</div>
       <h2 class="section-title">Gallery</h2>
       <div class="gallery">
-        <img class="g-span-4" src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?q=80&w=800&auto=format&fit=crop" alt="Teaching" />
-        <img class="g-span-4" src="https://images.unsplash.com/photo-1553034545-32d4e5c5ee1a?q=80&w=800&auto=format&fit=crop" alt="Research" />
-        <img class="g-span-4" src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?q=80&w=800&auto=format&fit=crop" alt="Conference" />
-        <img class="g-span-6" src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?q=80&w=900&auto=format&fit=crop" alt="Coding" />
-        <img class="g-span-6" src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?q=80&w=900&auto=format&fit=crop" alt="Cycling" />
+        <img class="g-span-4"images/IMG-20250821-WA0005.jpg" alt="Thesis" />
+        <img class="g-span-4" images/IMG-20250821-WA0006.jpg" alt="Research" />
+        <img class="g-span-4" src="images/IMG-20250821-WA0007.jpg" alt="Conference" />
+        <img class="g-span-6" images/IMG-20250821-WA0008.jpg" alt="Coding" />
       </div>
     </div>
   </section>
@@ -333,7 +333,7 @@
   </section>
 
   <footer>
-    © <span id="year"></span> Your Name · Made with ❤️
+    © <span id="year"></span> Surnam Narendra · Made with ❤️
   </footer>
 
   <script>
