--- a/index.html
+++ b/index.html
@@ -124,7 +124,14 @@
       <div>
         <div class="badge">🎓 Academic Portfolio</div>
         <h1>Hi, I'm <span style="color:var(--brand-2)">Surnam Narendra</span> — Researcher & Educator</h1>
-        <p class="lead">Briefly introduce yourself in 2–3 lines. Mention your research focus, teaching interests, and impact. For example: "I study probabilistic models for health analytics, teach statistical learning, and build open‑source tools."</p>
+        <p class="lead">Currently working as an assistant professor in the department of Mathematics at Woxsen University.
+My research specialises in statistics, focusing on stochastic modelling, Markov models, and
+their applications. I am passionate about advancing knowledge through research and education. My academic
+journey has honed my expertise in areas such as Hidden Markov Models and reinforcement learning, with
+applications to healthcare analytics, time-series modelling, and data-driven decision-making.
+ My commitment to teaching excellence and my ability to simplify complex statistical concepts, equip me to inspire and guide
+students effectively. Additionally, my experience in data analysis makes me well-suited for industry-oriented
+roles as a Data Scientist, where I can apply statistical methodologies to solve real-world problems."</p>
         <div style="margin-top:18px">
           <span class="pill">Statistics</span>
            <span class="pill">Data Analytics</span>
@@ -181,8 +188,8 @@
           <h3>Appointments</h3>
           <ul>
             <li>Researcher, Dept. of Mathematics, Woxsen University — Jul- 2025–Present</li>
-            <li>Teaching Assistant, Course Code — jul-2025–Present</li>
-            <li>Teaching Assistant, Course Code — jul-2025–Present</li>
+            <li>Teaching Assistant, Fundamentals of Machine Learning — jul-2025–Present</li>
+            <li>Teaching Assistant, Data Analytics using Excel and Power BI — jul-2025–Present</li>
           </ul>
         </article>
       </div>
@@ -194,19 +201,18 @@
     <div class="wrap">
       <div class="section-kicker">Research</div>
       <h2 class="section-title">Research Publications</h2>
-      <p class="sub">Add links to DOI/arXiv/publisher pages.</p>
       <div class="pub">
         <div class="num">1</div>
         <div>
-          <h4>Title of Paper One</h4>
-          <div class="t-meta">Surname, Y. N., Coauthor, A. (2024). <em>Journal Name</em>. <a href="#" style="color:var(--brand-2); text-decoration:none">DOI/Link</a></div>
+          <h4> Two-layered hidden Markov model for studying type 2 diabetes</h4>
+          <div class="t-meta">Tirupathi Rao Padi and Surnam Narendra <em> International Journal of System Assurance Engineering and Management </em>. <a href="#" style="color:var(--brand-2); text-decoration:none">https://doi.org/10.1007/s13198-024-02491-9</a></div>
         </div>
       </div>
       <div class="pub" style="margin-top:10px">
         <div class="num">2</div>
         <div>
-          <h4>Title of Paper Two</h4>
-          <div class="t-meta">Surname, Y. N. (2023). <em>Conference Name</em>. <a href="#">PDF</a></div>
+          <h4>MULTILEVEL HIDDEN MARKOV MODELS FOR STUDYING TYPE-1 DIABETES</h4>
+          <div class="t-meta">Surnam Narendra and Tirupathi Rao Padi <em>JP Journal of Biostatistics</em>. <a href="#">PDF</a></div>
         </div>
       </div>
     </div>
@@ -218,17 +224,13 @@
       <div class="section-kicker">Academics</div>
       <h2 class="section-title">Courses</h2>
       <div class="cards">
-        <article class="card">
-          <h3>Probability & Statistics</h3>
-          <p>UG core · Syllabus: probability axioms, distributions, estimation, hypothesis testing.</p>
+        
         </article>
         <article class="card">
           <h3>Machine Learning</h3>
           <p>PG elective · Syllabus: linear models, SVM, trees, ensembles, NN fundamentals.</p>
         </article>
-        <article class="card">
-          <h3>Optimization for ML</h3>
-          <p>Gradient methods, convex optimization, KKT, proximal algorithms.</p>
+       
         </article>
         <article class="card">
           <h3>R/Python for Data Science</h3>
@@ -306,10 +308,12 @@
       <div class="section-kicker">Snapshots</div>
       <h2 class="section-title">Gallery</h2>
       <div class="gallery">
-        <img class="g-span-4"images/IMG-20250821-WA0005.jpg" alt="Thesis" />
-        <img class="g-span-4" images/IMG-20250821-WA0006.jpg" alt="Research" />
-        <img class="g-span-4" src="images/IMG-20250821-WA0007.jpg" alt="Conference" />
-        <img class="g-span-6" images/IMG-20250821-WA0008.jpg" alt="Coding" />
+        <img class="g-span-4"src=images/IMG-20250821-WA0005.jpg" alt="Thesis" />
+        <img class="g-span-4" src=images/IMG-20250821-WA0006.jpg" alt="Research" />
+        <img class="g-span-4" src="images/IMG-20250821-WA0007.jpg" alt="Research" />
+        <img class="g-span-6"src= images/IMG-20250821-WA0008.jpg" alt="PhD" />
+                <img class="g-span-6"src= images/conference.jpg" alt="Conference" />
+
       </div>
     </div>
   </section>
