--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ roles as a Data Scientist, where I can apply statistical methodologies to solve 
           <div class="t-meta">Dec 2021 – Feb 2025 · Thesis: Multi-Level Hidden Markov Models and its Applications in Diabetes Studies · Advisor: Prof. Tirupathi Rao Padi</div>
         </div>
         <div class="t-item">
-          <h4>M.Sc. in Statistics — <em>Central University of Punajb</em></h4>
+          <h4>M.Sc. in Statistics — <em>Central University of Punjab</em></h4>
           <div class="t-meta">2019 – 2021 · CGPA:6.69/10</div>
         </div>
         <div class="t-item">
