--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@ roles as a Data Scientist, where I can apply statistical methodologies to solve 
         <article class="card">
           <h3>Machine Learning</h3>
           <p>PG elective · Syllabus: linear models, SVM, trees, ensembles, NN fundamentals.</p>
+                        <p>&copy; Lecture Notes | <a href="https://surnamnarendra.github.io/Surnam-Narendra/"></a></p>
+
         </article>
        
         </article>
