--- a/index.html
+++ b/index.html
@@ -229,14 +229,16 @@ roles as a Data Scientist, where I can apply statistical methodologies to solve 
         <article class="card">
           <h3>Machine Learning</h3>
           <p>PG elective · Syllabus: linear models, SVM, trees, ensembles, NN fundamentals.</p>
-                        <p>  <a href="https://surnamnarendra.github.io/Surnam-Narendra/">Lecture Notes</a></p>
+                        <p>  <a href="https://surnamnarendra.github.io/Fundamentals-of-Machine-Learning/">Lecture Notes</a></p>
 
         </article>
        
         </article>
         <article class="card">
-          <h3>R/Python for Data Science</h3>
-          <p>Data wrangling, visualization, reproducible research.</p>
+          <h3>Data Analytics Using Excel and Power BI</h3>
+          <p>Basic statistics, excel functions, data analytics toolpack</p>
+                                  <p>  <a href="https://surnamnarendra.github.io/Data-Analytics-Using-Excel-and-Power-BI/">Lecture Notes</a></p>
+
         </article>
       </div>
     </div>
