--- a/index.html
+++ b/index.html
@@ -228,17 +228,19 @@ roles as a Data Scientist, where I can apply statistical methodologies to solve 
         </article>
         <article class="card">
           <h3>Machine Learning</h3>
-          <p>PG elective · Syllabus: linear models, SVM, trees, ensembles, NN fundamentals.</p>
+          <p> Linear Algebra, Optimisation in ML, Introduction to ML,DL models. </p>
                         <p>  <a href="https://surnamnarendra.github.io/Fundamentals-of-Machine-Learning/">Lecture Notes</a></p>
-
         </article>
-       
         </article>
         <article class="card">
           <h3>Data Analytics Using Excel and Power BI</h3>
-          <p>Basic statistics, excel functions, data analytics toolpack</p>
-                                  <p>  <a href="https://surnamnarendra.github.io/Data-Analytics-Using-Excel-and-Power-BI/">Lecture Notes</a></p>
-
+          <p>Basic statistics, Excel functions, data analytics toolpack</p>
+          <p>  <a href="https://surnamnarendra.github.io/Data-Analytics-Using-Excel-and-Power-BI/">Lecture Notes</a></p>
+        </article>
+        <article class="card">
+          <h3>Enginerring Mathematics</h3>
+          <p>Matrix theorey, Calculas, ODE</p>
+          <p>  <a href="https://surnamnarendra.github.io/Enginerring-Mathematics/">Lecture Notes</a></p>
         </article>
       </div>
     </div>
