--- a/index.html
+++ b/index.html
@@ -318,6 +318,9 @@ roles as a Data Scientist, where I can apply statistical methodologies to solve 
         <img class="g-span-4" src="images/IMG-20250821-WA0007.jpg" alt="Research" />
         <img class="g-span-6"src= "images/IMG-20250821-WA0008.jpg" alt="PhD" />
                 <img class="g-span-6"src= "images/conference.jpg" alt="Conference" />
+                        <img class="g-span-6"src= "images/121A7199.jpg" alt="Orientation" />
+                <img class="g-span-6"src= "images/M4_00436.jpg" alt="Orientation" />
+
 
       </div>
     </div>
